Get `fieldLayout` directly, since elements implement `ElementInterface`
Both Assets and Entries (as well as most other Elements) implement the `ElementInterface`, meaning we can safely use that interface's methods in our logic here.

--- a/src/templates/_translate/review.twig
+++ b/src/templates/_translate/review.twig
@@ -88,7 +88,7 @@
                     <h2>Ignore Fields</h2>
                 </legend>
 
-                {% set fields = element.type.fieldLayout.customFields %}
+                {% set fields = element.fieldLayout.customFields %}
                 {% set fieldsOptions = [{label: "Title", value: "title"}]
                     |merge(fields|map(field => {label: "#{field.name} (#{field.handle})", value: field.handle})) %}
 
